Fix map layout on smaller screens

--- a/src/components/panels/campaign-map/campaign-map-panel.scss
+++ b/src/components/panels/campaign-map/campaign-map-panel.scss
@@ -1,7 +1,7 @@
 .campaign-map {
 	.campaign-map-inner {
-		width: 620px;
-		height: 620px;
+		width: 600px;
+		height: 600px;
 		margin: 0 auto;
 
 		.campaign-map-square-container {
